@@ -21,14 +21,14 @@ repositories {
 
 dependencies {
 	compile 'commons-collections:commons-collections:3.2.2'
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
+    compile 'org.apache.commons:commons-dbcp2:2.8.0'
     compile 'commons-net:commons-net:3.6'
     compile 'jaxen:jaxen:1.2.0'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.4'
-    compile 'org.springframework:spring-jdbc:5.3.4'
+    compile 'org.springframework:spring-beans:5.3.5'
+    compile 'org.springframework:spring-jdbc:5.3.5'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
